recipebook/target/recipeParser.java
// Generated from ./recipe.g4 by ANTLR 4.5


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class recipeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		Hex_number=25, Decimal_number=26, Octal_number=27, Binary_number=28, Real_number=29, 
		COMMENT=30, WS=31, TRUE=32, FALSE=33, APPLY=34, KEY=35, ACTION=36, STATE=37, 
		BOOL=38, BIT=39, INT=40, VARBIT=41, T_ERROR=42, TABLEADD=43, TABLE=44, 
		INPUT=45, OUTPUT=46, INPUTPACKET=47, OUTPUTPACKET=48, TABLE_CONFIGURATION=49, 
		SYMBOLS=50, TUPLE=51, THIS=52, Ether=53, IP=54, TCP=55, UDP=56, STRING=57, 
		DONTCARE=58, IDENTIFIER=59, MASK=60, RANGE=61, SHL=62, AND=63, OR=64, 
		EQ=65, NE=66, GE=67, LE=68, PP=69;
	public static final int
		RULE_start = 0, RULE_declaration = 1, RULE_input_output_declaration = 2, 
		RULE_symbols_declaration = 3, RULE_names_list = 4, RULE_table_declaration = 5, 
		RULE_table_add = 6, RULE_tablename = 7, RULE_actionname = 8, RULE_matchfields = 9, 
		RULE_actionparams = 10, RULE_ipaddress = 11, RULE_priority = 12, RULE_value = 13, 
		RULE_argument_list = 14, RULE_arg = 15, RULE_key = 16, RULE_key_value_pair = 17, 
		RULE_key_value_pair_list = 18, RULE_protocol_name = 19, RULE_protocol_hdr = 20, 
		RULE_protocol_hdr_list = 21, RULE_packet = 22, RULE_packet_declaration = 23, 
		RULE_expressionList = 24, RULE_typeRef = 25, RULE_prefixedType = 26, RULE_typeName = 27, 
		RULE_tupleType = 28, RULE_headerStackType = 29, RULE_specializedType = 30, 
		RULE_baseType = 31, RULE_typeArg = 32, RULE_typeArgumentList = 33, RULE_dotPrefix = 34, 
		RULE_nonTypeName = 35, RULE_name = 36, RULE_argumentList = 37, RULE_expression = 38, 
		RULE_number = 39;
	public static final String[] ruleNames = {
		"start", "declaration", "input_output_declaration", "symbols_declaration", 
		"names_list", "table_declaration", "table_add", "tablename", "actionname", 
		"matchfields", "actionparams", "ipaddress", "priority", "value", "argument_list", 
		"arg", "key", "key_value_pair", "key_value_pair_list", "protocol_name", 
		"protocol_hdr", "protocol_hdr_list", "packet", "packet_declaration", "expressionList", 
		"typeRef", "prefixedType", "typeName", "tupleType", "headerStackType", 
		"specializedType", "baseType", "typeArg", "typeArgumentList", "dotPrefix", 
		"nonTypeName", "name", "argumentList", "expression", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "','", "'=>'", "'/'", "'.'", "'['", "']'", "'='", "'('", 
		"')'", "'<'", "'>'", "'{'", "'}'", "'!'", "'~'", "'-'", "'+'", "'*'", 
		"'%'", "'&'", "'^'", "'|'", "'?'", null, null, null, null, null, null, 
		null, "'true'", "'false'", "'apply'", "'key'", "'action'", "'state'", 
		"'bool'", "'bit'", "'int'", "'varbit'", "'error'", "'table_add'", "'table'", 
		"'input'", "'output'", "'input_packets'", "'output_packets'", "'table_configuration'", 
		"'symbols'", "'tuple'", "'this'", "'Ether'", "'IP'", "'TCP'", "'UDP'", 
		null, "'_'", null, "'&&&'", "'..'", "'<<'", "'&&'", "'||'", "'=='", "'!='", 
		"'>='", "'<='", "'++'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Hex_number", "Decimal_number", "Octal_number", "Binary_number", 
		"Real_number", "COMMENT", "WS", "TRUE", "FALSE", "APPLY", "KEY", "ACTION", 
		"STATE", "BOOL", "BIT", "INT", "VARBIT", "T_ERROR", "TABLEADD", "TABLE", 
		"INPUT", "OUTPUT", "INPUTPACKET", "OUTPUTPACKET", "TABLE_CONFIGURATION", 
		"SYMBOLS", "TUPLE", "THIS", "Ether", "IP", "TCP", "UDP", "STRING", "DONTCARE", 
		"IDENTIFIER", "MASK", "RANGE", "SHL", "AND", "OR", "EQ", "NE", "GE", "LE", 
		"PP"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "recipe.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public recipeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			declaration();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INPUT) | (1L << OUTPUT) | (1L << INPUTPACKET) | (1L << OUTPUTPACKET) | (1L << TABLE_CONFIGURATION) | (1L << SYMBOLS))) != 0)) {
				{
				{
				setState(81);
				declaration();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Input_output_declarationContext input_output_declaration() {
			return getRuleContext(Input_output_declarationContext.class,0);
		}
		public Symbols_declarationContext symbols_declaration() {
			return getRuleContext(Symbols_declarationContext.class,0);
		}
		public Table_declarationContext table_declaration() {
			return getRuleContext(Table_declarationContext.class,0);
		}
		public Packet_declarationContext packet_declaration() {
			return getRuleContext(Packet_declarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			switch (_input.LA(1)) {
			case INPUT:
			case OUTPUT:
				{
				setState(87);
				input_output_declaration();
				}
				break;
			case SYMBOLS:
				{
				setState(88);
				symbols_declaration();
				}
				break;
			case TABLE_CONFIGURATION:
				{
				setState(89);
				table_declaration();
				}
				break;
			case INPUTPACKET:
			case OUTPUTPACKET:
				{
				setState(90);
				packet_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_output_declarationContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(recipeParser.INPUT, 0); }
		public List<Key_value_pairContext> key_value_pair() {
			return getRuleContexts(Key_value_pairContext.class);
		}
		public Key_value_pairContext key_value_pair(int i) {
			return getRuleContext(Key_value_pairContext.class,i);
		}
		public TerminalNode OUTPUT() { return getToken(recipeParser.OUTPUT, 0); }
		public Input_output_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_output_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterInput_output_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitInput_output_declaration(this);
		}
	}

	public final Input_output_declarationContext input_output_declaration() throws RecognitionException {
		Input_output_declarationContext _localctx = new Input_output_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_input_output_declaration);
		int _la;
		try {
			setState(109);
			switch (_input.LA(1)) {
			case INPUT:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(INPUT);
				setState(94);
				match(T__0);
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << APPLY) | (1L << KEY) | (1L << ACTION) | (1L << STATE) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(95);
					key_value_pair();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case OUTPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(OUTPUT);
				setState(102);
				match(T__0);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << APPLY) | (1L << KEY) | (1L << ACTION) | (1L << STATE) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(103);
					key_value_pair();
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Symbols_declarationContext extends ParserRuleContext {
		public TerminalNode SYMBOLS() { return getToken(recipeParser.SYMBOLS, 0); }
		public Names_listContext names_list() {
			return getRuleContext(Names_listContext.class,0);
		}
		public Symbols_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbols_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterSymbols_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitSymbols_declaration(this);
		}
	}

	public final Symbols_declarationContext symbols_declaration() throws RecognitionException {
		Symbols_declarationContext _localctx = new Symbols_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_symbols_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(SYMBOLS);
			setState(112);
			match(T__0);
			setState(114);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << APPLY) | (1L << KEY) | (1L << ACTION) | (1L << STATE) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(113);
				names_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Names_listContext extends ParserRuleContext {
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public Names_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_names_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterNames_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitNames_list(this);
		}
	}

	public final Names_listContext names_list() throws RecognitionException {
		Names_listContext _localctx = new Names_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_names_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			name();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(117);
				match(T__1);
				setState(118);
				name();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_declarationContext extends ParserRuleContext {
		public TerminalNode TABLE_CONFIGURATION() { return getToken(recipeParser.TABLE_CONFIGURATION, 0); }
		public List<Table_addContext> table_add() {
			return getRuleContexts(Table_addContext.class);
		}
		public Table_addContext table_add(int i) {
			return getRuleContext(Table_addContext.class,i);
		}
		public Table_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterTable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitTable_declaration(this);
		}
	}

	public final Table_declarationContext table_declaration() throws RecognitionException {
		Table_declarationContext _localctx = new Table_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_table_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(TABLE_CONFIGURATION);
			setState(125);
			match(T__0);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TABLEADD) {
				{
				{
				setState(126);
				table_add();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_addContext extends ParserRuleContext {
		public TerminalNode TABLEADD() { return getToken(recipeParser.TABLEADD, 0); }
		public TablenameContext tablename() {
			return getRuleContext(TablenameContext.class,0);
		}
		public ActionnameContext actionname() {
			return getRuleContext(ActionnameContext.class,0);
		}
		public MatchfieldsContext matchfields() {
			return getRuleContext(MatchfieldsContext.class,0);
		}
		public ActionparamsContext actionparams() {
			return getRuleContext(ActionparamsContext.class,0);
		}
		public PriorityContext priority() {
			return getRuleContext(PriorityContext.class,0);
		}
		public Table_addContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterTable_add(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitTable_add(this);
		}
	}

	public final Table_addContext table_add() throws RecognitionException {
		Table_addContext _localctx = new Table_addContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_table_add);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(TABLEADD);
			setState(133);
			tablename();
			setState(134);
			actionname();
			setState(135);
			matchfields();
			setState(136);
			match(T__2);
			setState(137);
			actionparams();
			setState(139);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(138);
				priority();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TablenameContext extends ParserRuleContext {
		public TerminalNode TABLE() { return getToken(recipeParser.TABLE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(recipeParser.IDENTIFIER, 0); }
		public TablenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tablename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterTablename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitTablename(this);
		}
	}

	public final TablenameContext tablename() throws RecognitionException {
		TablenameContext _localctx = new TablenameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tablename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(TABLE);
			setState(142);
			match(T__0);
			setState(143);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionnameContext extends ParserRuleContext {
		public TerminalNode ACTION() { return getToken(recipeParser.ACTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(recipeParser.IDENTIFIER, 0); }
		public ActionnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterActionname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitActionname(this);
		}
	}

	public final ActionnameContext actionname() throws RecognitionException {
		ActionnameContext _localctx = new ActionnameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_actionname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(ACTION);
			setState(146);
			match(T__0);
			setState(147);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchfieldsContext extends ParserRuleContext {
		public TerminalNode KEY() { return getToken(recipeParser.KEY, 0); }
		public TerminalNode IDENTIFIER() { return getToken(recipeParser.IDENTIFIER, 0); }
		public TerminalNode Real_number() { return getToken(recipeParser.Real_number, 0); }
		public IpaddressContext ipaddress() {
			return getRuleContext(IpaddressContext.class,0);
		}
		public MatchfieldsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchfields; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterMatchfields(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitMatchfields(this);
		}
	}

	public final MatchfieldsContext matchfields() throws RecognitionException {
		MatchfieldsContext _localctx = new MatchfieldsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_matchfields);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(KEY);
			setState(150);
			match(T__0);
			setState(159);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(151);
				match(IDENTIFIER);
				setState(152);
				match(T__3);
				setState(153);
				match(Real_number);
				}
				break;
			case 2:
				{
				setState(154);
				ipaddress();
				setState(155);
				match(T__3);
				setState(156);
				match(Real_number);
				}
				break;
			case 3:
				{
				setState(158);
				match(IDENTIFIER);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionparamsContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(recipeParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(recipeParser.IDENTIFIER, i);
		}
		public List<IpaddressContext> ipaddress() {
			return getRuleContexts(IpaddressContext.class);
		}
		public IpaddressContext ipaddress(int i) {
			return getRuleContext(IpaddressContext.class,i);
		}
		public List<TerminalNode> Real_number() { return getTokens(recipeParser.Real_number); }
		public TerminalNode Real_number(int i) {
			return getToken(recipeParser.Real_number, i);
		}
		public ActionparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionparams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterActionparams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitActionparams(this);
		}
	}

	public final ActionparamsContext actionparams() throws RecognitionException {
		ActionparamsContext _localctx = new ActionparamsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_actionparams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Hex_number) | (1L << Decimal_number) | (1L << Octal_number) | (1L << Binary_number) | (1L << Real_number) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(169);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					{
					setState(161);
					ipaddress();
					setState(162);
					match(T__3);
					setState(163);
					match(Real_number);
					}
					}
					break;
				case 2:
					{
					{
					setState(165);
					match(IDENTIFIER);
					setState(166);
					match(T__3);
					setState(167);
					match(Real_number);
					}
					}
					break;
				case 3:
					{
					setState(168);
					match(IDENTIFIER);
					}
					break;
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IpaddressContext extends ParserRuleContext {
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public IpaddressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ipaddress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).enterIpaddress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof recipeListener ) ((recipeListener)listener).exitIpaddress(this);
		}
	}
